<resources>
    <string name="app_name">TexMobile</string>

    <string name="title">TexMobile</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>

    <string name="credits">Credits:\n
        Programming and layout by Alex Comeau.\n
        Menu music, Chibi Ninja, and game music, All of Us, produced by <a href="http://ericskiff.com/">Eric Skiff</a>,
        available under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution License 3.0.</a></string>

    <string name="settings">Settings</string>
    <string name="volMusic">Music Volume: %1$d%%</string>
    <string name="volSound">Sound Effect Volume: %1$d%%</string>
    <string name="levelStart">Starting Level:</string>
    <string name="ok">OK</string>

    <string name="game_name">Game</string>
    <string name="score">Score\n %1$d</string>
    <string name="level">Level\n %1$d / %2$d</string>
    <string name="next">Next Block</string>
    <string name="gameover">Game Over!</string>
    <string name="pressAny">Press Any Button!</string>
    <string name="down">Move Down Button</string>
    <string name="left">Move Left Button</string>
    <string name="right">Move Right Button</string>
    <string name="rotateLeft">Rotate Left Button</string>
    <string name="rotateRight">Rotate Right Button</string>

    <string name="enter_name">New High Score</string>
    <string name="congrats">Congratulations!</string>
    <string name="newHighScore">You set a new high score!</string>
    <string name="enterName">Enter your name:</string>
    <string name="hint">Name</string>
    <string name="enter">Enter</string>

    <string name="highscore_name">High Scores</string>
    <string name="highscore">High Scores</string>
    <string name="hsName">Player</string>
    <string name="hsScore">Score</string>
    <string name="hsTime">Time</string>
    <string name="hsGrade">Grade</string>
    <string name="back">Back to Menu</string>
</resources>
