<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#63d1ff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:textSize="32sp"
        android:id="@+id/hsTitle"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:id="@+id/hsScroll"
        android:layout_above="@+id/btnBack"
        android:layout_below="@id/hsTitle">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tblScores"
            android:padding="10dp"
            android:stretchColumns="1,2,3"
            android:textColor="@android:color/black">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/hsName"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_column="2"
                    android:text="@string/hsScore"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_column="3"
                    android:text="@string/hsTime"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_column="4"
                    android:text="@string/hsGrade"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btnBack"
        android:onClick="btnBackClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"/>

</RelativeLayout>